test/should_not_compile/signature2.sml
structure Foo = struct
exception Bar
end : sig val Bar : exn end;
() handle Foo.Bar => ();
